player and 3 enemies on screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <h3>Girl Catch beloved but very stressed Hamster Game</h3>
       <h5>Visualising the A* algorithm in a game</h5>
     </header>
-    <div id="gameField"></div>
+    <div id="gamefield">
+      <div id="player"></div>
+      <div id="enemy1"></div>
+      <div id="enemy2"></div>
+      <div id="enemy3"></div>
+    </div>
 
     <script type="module" src="script.js"></script>
   </body>
