--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
     <div id="gamefield">
       <div id="player"></div>
-      <div id="enemy1"></div>
-      <div id="enemy2"></div>
+      <!-- <div id="enemy1"></div> -->
+      <!-- <div id="enemy2"></div> -->
       <div id="enemy3"></div>
     </div>
 
