minor changes to title and style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
   <body>
     <header>
-      <h3>Girl Catch beloved but very stressed Hamster Game</h3>
+      <h4>Girl Catch beloved but very stressed </h4>
+      <h3> Rodent Game</h3>
       <h5>Visualising the A* algorithm in a game</h5>
     </header>
     <div id="gamefield">
