--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
   </head>
   <body>
     <header>
-      <h4>Girl Catch beloved but very stressed </h4>
-      <h3> Rodent Game</h3>
+      <h4>Girl Catch beloved but very stressed</h4>
+      <h3>Rodent Game</h3>
       <h5>Visualising the A* algorithm in a game</h5>
     </header>
     <div id="gamefield">
-      <div id="player"></div>
-      <!-- <div id="enemy1"></div> -->
-      <!-- <div id="enemy2"></div> -->
-      <div id="enemy3"></div>
+      <div id="background">
+        <div id="characters">
+          <div id="player"></div>
+          <!-- <div id="enemy1"></div> -->
+          <!-- <div id="enemy2"></div> -->
+          <div id="enemy3"></div>
+        </div>
+      </div>
     </div>
 
     <script type="module" src="script.js"></script>
