--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div id="gamefield">
       <div id="background"></div>
       <div id="characters">
-        <div id="player"></div>
+        <!-- <div id="player"></div> -->
         <!-- <div id="enemy1"></div> -->
         <!-- <div id="enemy2"></div> -->
-        <div id="enemy3"></div>
+        <!-- <div id="enemy3"></div> -->
       </div>
     </div>
 
