clean up - Ui added

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h3>Rodent Game</h3>
       <h5>Visualising the A* algorithm in a game</h5>
     </header>
+   
+    <div id="UI">
+      <button id="btn-playState">Start</button>
+      <h2 id="points">Points: 20</h2>
+    </div>
     <div id="gamefield">
       <div id="background"></div>
-      <div id="characters">
-        <!-- <div id="player"></div> -->
-        <!-- <div id="enemy1"></div> -->
-        <!-- <div id="enemy2"></div> -->
-        <!-- <div id="enemy3"></div> -->
-      </div>
+      <div id="characters"></div>
     </div>
 
     <script type="module" src="script.js"></script>
