small fix in resetGrid, and change title in html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   </head>
   <body>
     <header>
-      <h4>Gather cheese and run!</h4>
+      <!-- <h4>Gather cheese and run!</h4> -->
+      <h4>Run to freedom!</h4>
       <h3>Rodent Game</h3>
       <h5>Visualising the A* algorithm in a game</h5>
     </header>
    
     <div id="UI">
       <button id="btn-playState">Start</button>
-      <h2 id="points">Points: 20</h2>
+      <!-- <h2 id="points">Points: 20</h2> -->
     </div>
     <div id="gamefield">
       <div id="background"></div>
